# analisis_algortitmos

./: README.md
2_tarea/: CMakeLists.txt  README.md  results.txt
2_tarea/data/: 2tarea_plot.eps  plot.gnuplot  results.txt  results_ave.txt
2_tarea/include/: sorting_algorithms.hpp
2_tarea/src/: pruebas.cpp  sorting_algorithms.cpp  timer.cpp
3_tarea/: 3tarea_plot.eps  3tarea_plot_close.eps  3tarea_plot_close2.eps  CMakeLists.txt  plot.gnuplot
3_tarea/data/: f4_data.txt  f9_data.txt  fa_data.txt  fb_data.txt
3_tarea/src/: calcs.cpp  calcs.lisp  get_data.sh
huffman/: CMakeLists.txt
huffman/include/: huffman.hpp  node.hpp  priority_queue.cpp  priority_queue.hpp
huffman/src/: huffman.cpp  node.cpp  priority_queue.cpp  tests.cpp
karatsuba/: CMakeLists.txt
karatsuba/data/: karatsuba_cpp.eps  karatsuba_cpp_2.eps  mul_results.txt  normal_mul_results.txt  normal_mul_tests.bash  plot.gnuplot  tests.bash
karatsuba/include/: timer.hpp
karatsuba/src/: karatsuba.cpp  normal_mul.cpp
matrices/: CMakeLists.txt
matrices/src/: example.cpp  example.py  mochila.cpp  simplex.cpp
shortest-path/: CMakeLists.txt
shortest-path/include/: dijkstra.hpp
shortest-path/src/: dijkstra.cpp  shortest-path.cpp
